<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_reset"
        android:layout_marginStart="120dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="10dp"
        android:background="@color/btnBackgroundPrimary"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/btn_start"
        android:textAppearance="@style/GravityBouton" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_showTimerList"
        android:layout_marginStart="120dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="10dp"
        android:background="@color/btnBackgroundSecondary"
        android:gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/btn_reset"
        android:textAppearance="@style/GravityBouton" />


    <TextView
        android:id="@+id/lib_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="140dp"
        android:gravity="center"
        android:paddingBottom="50dp"
        android:text="@string/lib_timer"
        android:textAlignment="center"
        android:textAppearance="@style/GravityTimer" />

    <LinearLayout
        android:id="@+id/layout_session"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lib_session"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lib_session"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/lib_exerciceSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/lib_serie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_session"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/lib_nb_serie"
        android:textAppearance="@style/GravityLibelle" />

    <TextView
        android:id="@+id/lib_exercice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_session"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:gravity="end"
        android:text="@string/lib_nb_exo"
        android:textAppearance="@style/GravityLibelle" />

    <TextView
        android:id="@+id/lib_cpt_serie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lib_serie"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        android:text="@string/lib_cpt_serie"
        android:textAppearance="@style/GravityTinyLibelle" />

    <TextView
        android:id="@+id/lib_cpt_exercice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lib_exercice"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="20dp"
        android:text="@string/lib_cpt_exo"
        android:textAppearance="@style/GravityTinyLibelle" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_showTimerList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        app:backgroundTint="@color/btnBackgroundPrimary"
        app:elevation="0dp"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_list_white_96dp"
        tools:ignore="VectorDrawableCompat"
        android:focusable="true" />

</RelativeLayout>