<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_add"
        android:scrollbarStyle="outsideInset">

        <LinearLayout
            android:id="@+id/scroll_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_timerName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lib_timerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/gravity_book"
                    android:text="@string/lib_add_name"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:autofillHints=""
                    android:fontFamily="@font/gravity_book"
                    android:hint="@string/lib_add_hint"
                    android:inputType="text"
                    tools:targetApi="o" />
            </LinearLayout>

            <View
                android:id="@+id/divider_timerName"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:background="#E2E2E2" />

            <TextView
                android:id="@+id/lib_add_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/gravity_book"
                android:text="@string/lib_add_instructions"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layout_exo1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lib_nbExo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/gravity_book"
                    android:text="@string/lib_add_exo1"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/input_exo1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gravity_book"
                    android:hint="@string/lib_add_hint"
                    android:inputType="text"
                    android:autofillHints="" />
            </LinearLayout>


            <RelativeLayout
                android:id="@+id/layout_exo1_set1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/lib_set1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/gravity_book"
                    android:text="@string/lib_add_set1"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/input_timeMinute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/input_timeSecond"
                    android:ems="4"
                    android:fontFamily="@font/gravity_book"
                    android:hint="min"
                    android:inputType="number"
                    android:maxLength="2"
                    android:autofillHints="" />

                <EditText
                    android:id="@+id/input_timeSecond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:ems="4"
                    android:fontFamily="@font/gravity_book"
                    android:hint="sec"
                    android:inputType="number"
                    android:maxLength="2"
                    android:autofillHints="" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scroll_activity"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/btnBackgroundPrimary"
        android:fontFamily="@font/gravity_bold"
        android:text="@string/btn_add_timer"
        android:textAllCaps="false"
        android:textColor="@color/colorTextPrimary"
        android:textSize="20sp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_addSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scroll_view"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@id/btn_add"
        android:clickable="true"
        app:backgroundTint="@color/design_default_color_primary"
        app:elevation="0dp"
        app:fabSize="mini"
        app:rippleColor="@color/colorPrimary"
        app:srcCompat="@android:drawable/ic_input_add"
        android:focusable="true" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btn_rmSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scroll_view"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@id/btn_addSet"
        android:clickable="true"
        app:backgroundTint="@color/colorAccent"
        app:elevation="0dp"
        app:fabSize="mini"
        app:rippleColor="@color/colorPrimary"
        app:srcCompat="@android:drawable/ic_delete"
        android:focusable="true" />


</android.widget.RelativeLayout>